package com.reisiegel.volleyballhelper.models

class Substitution(var playerOut: Player, var playerIn: Player, var set: Int, var teamScore: Int, var opponentScore: Int) {
}